k8s-basics/kubernetes/app-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: demoapp
  labels:
    app: demoapp
    version: 1.0.0
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: demoapp
  template: 
    metadata: 
      labels: 
        app: demoapp
    spec: 
      containers: 
      - name: demoapp
        image: kotrev/go-demo-app:1.0.0
        ports: 
        - containerPort: 8000
