k8s-basics/kubernetes/kuard.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  volumes:
    - name: "kuard-data"
      hostPath:
        path: "/var/lib/kuard"
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: kuard
      volumeMounts:
        - mountPath: "/data"
          name: "kuard-data"
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "1000m"
          memory: "256Mi"
      # Pod must be ready, before Kubernetes start sending traffic to it
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        # Check is done every 2 seconds starting as soon as the pod comes up
        periodSeconds: 2
        # Start checking once pod is up
        initialDelaySeconds: 0
        # If three successive checks fail, then the pod will be considered not ready.
        failureThreshold: 3
        # If only one check succeeds, then the pod will again be considered ready.
        successThreshold: 1
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        # Start probe 5 seconds after all the containers in the Pod are created
        initialDelaySeconds: 5
        # The response must be max in 1 second and status HTTP code must be between 200 and 400
        timeoutSeconds: 1
        # Repeat every 10 seconds
        periodSeconds: 10
        # If more than 3 probes failed - the container will fail + restart
        failureThreshold: 3
